# compare_linux_runners

./: .gitignore  README.md  benchmark.py  benchmark_results_x86_64.json
.github/workflows/: all_tests.yml  benchmark.yml  simd.yml
scripts/: generate_summary.py
simd_compare/: CMakeLists.txt  README.md
simd_compare/include/: simd_ops.hpp
simd_compare/src/: bench.cpp  kernels_neon.cpp  kernels_scalar.cpp  kernels_sse.cpp
simd_compare/tests/: test_kernels.cpp
